# qt-notes-md

./: .gitignore  CMakeLists.txt  README.md
qml/: Editor.qml  Main.qml  SideBar.qml  Workspace.qml  WorkspacePicker.qml
qml/components/: AppConfirmDialog.qml  AppContextMenu.qml  AppIconButton.qml  AppMenu.qml  AppMenuBar.qml  AppMenuItem.qml  AppTextButton.qml  AppToolTip.qml
qml/editor/: Editor.qml
qml/shared/components/: AppIconButton.qml  AppMenu.qml  AppMenuBar.qml  AppMenuItem.qml  AppTextButton.qml  DividerVertical.qml
qml/shared/theme/: Theme.qml  ThemeBase.qml  ThemeColor.qml  ThemeDark.qml
qml/sidebar/: SideBar.qml  SideBarButton.qml
qml/theme/: Theme.qml  ThemeColor.qml
qml/workspace/: Workspace.qml  WorkspaceFileViewer.qml  WorkspacePicker.qml
src/: AppConfig.cpp  AppConfig.h  AppState.cpp  AppState.h  FileHandler.cpp  FileHandler.h  Main.cpp  WorkspaceFileSystemModel.cpp  WorkspaceFileSystemModel.h  appstate.cpp  appstate.h  filehandler.cpp  fileviewermodel.cpp  fileviewermodel.h  main.cpp  workspacefilesystemmodel.cpp  workspaceviewmodel.cpp  workspaceviewmodel.h
